<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statistics">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/STATISTICS_str"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_statistics_win_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="226dp"
        android:text="@string/STATISTICS_win_str"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_statistics_lose_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/STATISTICS_lose_str"
        app:layout_constraintEnd_toEndOf="@+id/tv_statistics_win_str"
        app:layout_constraintStart_toStartOf="@+id/tv_statistics_win_str"
        app:layout_constraintTop_toBottomOf="@+id/tv_statistics_win_str" />

    <TextView
        android:id="@+id/tv_statistics_draw_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/STATISTICS_draw_str"
        app:layout_constraintEnd_toEndOf="@+id/tv_statistics_lose_str"
        app:layout_constraintStart_toStartOf="@+id/tv_statistics_lose_str"
        app:layout_constraintTop_toBottomOf="@+id/tv_statistics_lose_str" />

    <TextView
        android:id="@+id/tv_statistics_total_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="50dp"
        android:text="@string/STATISTICS_total_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tv_statistics_winRate_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:text="@string/STATISTICS_winRate_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="33dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/tv_statistics_draw_str"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_statistics_win_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/tv_statistics_win_str"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_statistics_lose_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/tv_statistics_win_num"
        app:layout_constraintStart_toStartOf="@+id/tv_statistics_win_num"
        app:layout_constraintTop_toBottomOf="@+id/tv_statistics_win_num" />

    <TextView
        android:id="@+id/tv_statistics_draw_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/tv_statistics_lose_num"
        app:layout_constraintStart_toStartOf="@+id/tv_statistics_lose_num"
        app:layout_constraintTop_toBottomOf="@+id/tv_statistics_lose_num" />

    <TextView
        android:id="@+id/tv_statistics_total_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_statistics_total_str"
        app:layout_constraintStart_toStartOf="@+id/tv_statistics_total_str"
        app:layout_constraintTop_toBottomOf="@+id/tv_statistics_total_str" />

    <TextView
        android:id="@+id/tv_statistics_winRate_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_statistics_total_num"
        app:layout_constraintEnd_toEndOf="@+id/tv_statistics_winRate_str"
        app:layout_constraintStart_toStartOf="@+id/tv_statistics_winRate_str" />
</androidx.constraintlayout.widget.ConstraintLayout>